feat: crud attribute
